--- a/views/tasks_list.html.twig
+++ b/views/tasks_list.html.twig
@@ -22,4 +22,7 @@
     {% endfor %}
     </div>
     <hr>
+    <div class="row text-center">
+        {{ pagination|raw }}
+    </div>
 {% endblock %}
