--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <link href="assets/styles.css" rel="stylesheet">
+    <link href="/assets/styles.css" rel="stylesheet">
 </head>
 <body>
 
@@ -29,13 +29,6 @@
 
 <!--main-->
 <div class="container" id="main">
-
-     <div class="row">
-        <div class="col-sm-offset-10 col-sm-4 col-xs-6">
-            <a href="/create/"><div class="btn btn-lg btn-primary">Create task</div></a>
-        </div>
-     </div>
-
 {% block content %}{% endblock %}
 </div><!--/main-->
 
@@ -94,7 +87,7 @@
 </div>
 <!-- script references -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-<script src="assets/bootstrap/bootstrap.min.js"></script>
-<script src="assets/scripts.js"></script>
+<script src="/assets/bootstrap/bootstrap.min.js"></script>
+<script src="/assets/scripts.js"></script>
 </body>
 </html>
