added page for creating task (with preview) included jquery implemented system for output notifications

--- a/views/tasks_list.html.twig
+++ b/views/tasks_list.html.twig
@@ -20,7 +20,7 @@
                         <p class="lead">{{ task.title }}</p>
                         <p>Status: <strong>{{ task.status }}</strong></p>
                         <p>Автор: <strong>{{ task.author_name }}</strong></p>
-                        <p>Email: <strong>{{ task.email }}</strong></p>
+                        <p>Email: <strong>{{ task.author_email }}</strong></p>
                     </div>
                 </div>
             </div>
