--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -11,6 +11,7 @@
     <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link href="/assets/styles.css" rel="stylesheet">
+    <script src="/assets/jquery.min.js"></script>
 </head>
 <body>
 
@@ -29,7 +30,26 @@
 
 <!--main-->
 <div class="container" id="main">
-{% block content %}{% endblock %}
+    {% block messages %}
+        {% if notifications|length > 0 %}
+            {% if notifications.errors|length > 0 %}
+                <div class="alert alert-danger">
+                    {% for text in notifications.errors %}
+                        {{ text }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+            {% if notifications.messages|length > 0 %}
+                <div class="alert alert-success">
+                    {% for text in notifications.messages %}
+                        {{ text }}
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endif %}
+    {% endblock %}
+
+    {% block content %}{% endblock %}
 </div><!--/main-->
 
 <!--login modal-->
@@ -86,7 +106,6 @@
     </div>
 </div>
 <!-- script references -->
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <script src="/assets/bootstrap/bootstrap.min.js"></script>
 <script src="/assets/scripts.js"></script>
 </body>
