--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
-    <title>Bootstrap Google Plus Theme</title>
+    <title>{% block title %}Task Manager{% endblock %}</title>
     <meta name="generator" content="Bootply" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href="/assets/bootstrap/bootstrap.min.css" rel="stylesheet">
