--- a/views/create_task.html.twig
+++ b/views/create_task.html.twig
@@ -1,5 +1,7 @@
 {% extends "base.html.twig" %}
 
+{% block title %}Create new task{% endblock %}
+
 {% block content %}
     <div class="well">
         <form method="post">
