--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -22,7 +22,9 @@
                 <li class="active"><a href="/">Tasks</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login/" role="button" data-toggle="modal">Login</a></li>
+                {% if not is_logged_in %}
+                    <li><a href="/login/" role="button" data-toggle="modal">Login</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
